--- a/src/Entities/ProductsItem/ProductsItem.module.scss
+++ b/src/Entities/ProductsItem/ProductsItem.module.scss
@@ -7,15 +7,42 @@
   border-radius: 10px;
   padding: 10px;
   gap: 10px;
+  position: relative;
 
   h3 {
     height: 30px;
+  }
+
+  .desc {
+    background: rgb(253, 152, 119);
+    position: absolute;
+    width: 280px;
+    height: 250px;
+    border-radius: 10px;
+    top: 20;
+    left: 10;
+    z-index: 100;
+    opacity: 0;
+    transition: 0.5s;
+    padding: 20px;
+    cursor: pointer;
+
+    span {
+      background: rgb(253, 152, 119);
+      color: #fff;
+    }
+  }
+
+  .desc:hover {
+    opacity: 100;
   }
 
   .image {
     width: 100%;
     height: 250px;
     border-radius: 10px;
+    z-index: 0;
+    // position: relative;
   }
   
   .btn_wrap {
@@ -28,3 +55,4 @@
     }
   }
 }
+
