--- a/src/Entities/ProductsList/ProductsList.module.scss
+++ b/src/Entities/ProductsList/ProductsList.module.scss
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   padding: 0 10%;
+  justify-content: center;
+
 
   .list {
     display: flex;
@@ -11,4 +13,16 @@
     flex-wrap: wrap;
   }
 
+}
+
+
+.list_wrap::after {
+  content: "";
+  display: block;
+  background: #ffffffda;
+  box-shadow: 0 0 5px 2px rgba(253, 153, 119, 0.797);
+  height: 2px;
+  width: 80%;
+  align-self: center;
+  margin-top: 40px;
 }
