--- a/src/Entities/ProductsItem/ProductsItem.module.scss
+++ b/src/Entities/ProductsItem/ProductsItem.module.scss
@@ -9,9 +9,24 @@
   gap: 10px;
   position: relative;
 
-  h3 {
-    height: 30px;
+  .title_wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+      .icon {
+        cursor: pointer;
+        width: 25px;
+        height: 25px;
+        transition: 0.3s;
+      }
+
+      .icon:hover {
+        transform: scale(0.95);
+        color: rgba(252, 207, 192, 0.954);
+      }
   }
+
 
   .desc {
     background: rgb(253, 152, 119);
